Add files to improve oss score.
Add workflows

Add asciidoc

Update parent to latest release